Added a build scripts

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
 <body>
   <div id="root"></div>
 </body>
-<script src="../solution/mini-react.js"></script>
-<script src="App.js"></script>
+<script src="js/mini-react.js"></script>
+<script src="js/App.js"></script>
 
 </html>
 
