--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
       MiniReact.render(new App(), root);
     };
   </script>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
